--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,7 +179,7 @@
     <string name="save_deck_changes_header">Save deck changes?</string>
     <string name="save_deck_changes_text">Looks like you have made some changes that have not been saved.</string>
     <string name="save_deck_changes_button">Save changes</string>
-    <string name="discard_deck_changes_button">Discard Changes</string>
+    <string name="discard_deck_changes_button">Discard changes</string>
     <string name="saving_deck_changes_header">Saving…</string>
     <string name="editing_deck_screen_header">Editing deck</string>
     <string name="rewards_search_tab">Rewards</string>
@@ -192,5 +192,24 @@
     <string name="specialty_text">Select 5 different cards from your chosen specialty.</string>
     <string name="outside_interest_text">Select 1 card from any background or specialty as your outside interest.\nNote: cards from your chosen specialty/background are not shown here, but your outside interest is allowed to be from your chosen class if you use the other tabs to select it.</string>
     <string name="collection_text">Some campaign events may allow you to permanently swap cards from your deck with those from the collection.\nAfter selecting a new collection card and removing one from your deck, you can ‘return’ a card to the collection using the displaced cards tab.</string>
+
+    //Deck Side Drawer
+    <string name="deck_section_header">Deck</string>
+    <string name="deck_section_deck_id">Deck #%s</string>
+    <string name="deck_section_notes">Notes</string>
+    <string name="tools_section_header">Tools</string>
+    <string name="tools_section_charts">Charts</string>
+    <string name="campaign_section_header">Campaign</string>
+    <string name="campaign_section_camp">Camp</string>
+    <string name="campaign_section_camp_warning">Error: Deck contains problems!</string>
+    <string name="campaign_section_previous_deck">Previous deck</string>
+    <string name="campaign_section_next_deck">Next deck</string>
+    <string name="options_section_header">Options</string>
+    <string name="options_section_clone_deck">Clone deck</string>
+    <string name="clone_deck_name_postfix">(Copy)</string>
+    <string name="options_section_upload_deck">Upload to RangersDB</string>
+    <string name="coptions_section_upload_deck_warning">Error: Deck contains upgrades!</string>
+    <string name="options_section_delete_deck">Delete deck</string>
+    <string name="delete_deck_text">Are you sure you want to delete this deck? Version: %d.</string>
 
 </resources>
