--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="about_rangersdb_text">Many thanks to RangersDB.com for providing the structured data, API access and access to card images. Without their continued support, this project wouldn\'t be possible.</string>
     <string name="icon_attribution">Icon Attribution:</string>
 
-    //Cards screen strings
+    //Cards screen
     <string name="no_matching_cards">No matching cards for \"%s\"</string>
     <string name="no_matching_cards_filtered">No matching cards</string>
     <string name="search_for_card">Search for a card</string>
@@ -95,7 +95,7 @@
     <string name="foc_styled_card_text">FOC</string>
     <string name="spi_styled_card_text">SPI</string>
 
-    //Decks screen strings
+    //Decks screen
     <string name="traveler_background">Traveler</string>
     <string name="shepherd_background">Shepherd</string>
     <string name="forager_background">Forager</string>
@@ -211,5 +211,16 @@
     <string name="coptions_section_upload_deck_warning">Error: Deck contains upgrades!</string>
     <string name="options_section_delete_deck">Delete deck</string>
     <string name="delete_deck_text">Are you sure you want to delete this deck? Version: %d.</string>
+
+    //Campaigns screen
+    <string name="campaigns_current_day">Day %d</string>
+    <string name="search_campaigns">Search campaigns</string>
+    <string name="no_matching_campaigns">No matching campaigns for \"%s\"</string>
+    <string name="no_campaigns">No campaigns yet.\n\nUse the + button to create a new one.</string>
+    <string name="new_campaign">New campaign</string>
+    <string name="campaign_creation_name_placeholder">Enter a name for this campaign.</string>
+    <string name="create_campaign_button">Create campaign</string>
+    <string name="campaign">Campaign</string>
+    <string name="campaign_placeholder">Choose campaign</string>
 
 </resources>
