Implemented campaigns icons and names

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -193,4 +193,52 @@
     <string name="create_campaign_button">Создать кампанию</string>
     <string name="campaign">Кампания</string>
     <string name="campaign_placeholder">Выберите кампанию</string>
+    <string name="core_cycle">База</string>
+    <string name="general_set_general">Общий набор</string>
+    <string name="general_set_the_valley">Долина</string>
+    <string name="old_growth">Реликтовый лес</string>
+    <string name="mountain_pass">Горный перевал</string>
+    <string name="woods">Лес</string>
+    <string name="lakeshore">Берег озера</string>
+    <string name="grassland">Пастбище</string>
+    <string name="ravine">Ущелье</string>
+    <string name="swamp">Болото</string>
+    <string name="river">Река</string>
+    <string name="atrox_mountain">Гора Атрокс</string>
+    <string name="northern_outpost">Северная застава</string>
+    <string name="lone_tree_station">Станция Одинокое дерево</string>
+    <string name="white_sky">Белое небо</string>
+    <string name="golden_shore">Золотой берег</string>
+    <string name="mount_nim">Гора Ним</string>
+    <string name="ancestors_grove">Роща предков</string>
+    <string name="kobos_market">Рынок Кобо</string>
+    <string name="boulder_field">Поле Валунов</string>
+    <string name="the_fractured_wall">Разрушенная стена</string>
+    <string name="the_philosophers_garden">Философский сад</string>
+    <string name="the_high_basin">Горный водоём</string>
+    <string name="branch">Ветви</string>
+    <string name="spire">Шпиль</string>
+    <string name="crossroads_station">Станция Перекрёсток</string>
+    <string name="the_furrow">Борозда</string>
+    <string name="biologists_outpost">Застава биологов</string>
+    <string name="terravore">Грязеед</string>
+    <string name="mound_of_the_navigator">Курган навигатора</string>
+    <string name="the_greenbridge">Зелёный мост</string>
+    <string name="michaels_bog">Гать Майкла</string>
+    <string name="the_cypress_citadel">Кипарисовая цитадель</string>
+    <string name="marsh_of_rebirth">Топь возрождения</string>
+    <string name="sunken_outpost">Затонувшая застава</string>
+    <string name="the_frowning_gate">Хмурые ворота</string>
+    <string name="bowl_of_the_sun">Солнечный бассейн</string>
+    <string name="the_alluvial_ruins">Россыпь руин</string>
+    <string name="the_tumbledown">Пропасть</string>
+    <string name="watchers_rock">Скала дозорного</string>
+    <string name="archeological_outpost">Застава археологов</string>
+    <string name="rings_of_the_moon">Лунные кольца</string>
+    <string name="the_concordant_ziggurats">Созвучные зиккураты</string>
+    <string name="meadow">Луга</string>
+    <string name="stoneweaver_bridge">Кружевной мост</string>
+    <string name="greenbriar_knoll">Смилаксовый холм</string>
+    <string name="the_plummet">Утёс</string>
+    <string name="headwaters_station">База Верховодье</string>
 </resources>
