--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,8 +208,9 @@
     <string name="options_section_clone_deck">Clone deck</string>
     <string name="clone_deck_name_postfix">(Copy)</string>
     <string name="options_section_upload_deck">Upload to RangersDB</string>
-    <string name="coptions_section_upload_deck_warning">Error: Deck contains upgrades!</string>
+    <string name="options_section_upload_deck_warning">Error: Deck contains upgrades!</string>
     <string name="options_section_delete_deck">Delete deck</string>
+    <string name="options_section_delete_deck_warning">Error: This deck in campaign!</string>
     <string name="delete_deck_text">Are you sure you want to delete this deck? Version: %d.</string>
 
     //Campaigns screen
