--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -242,4 +242,8 @@
     <string name="greenbriar_knoll">Смилаксовый холм</string>
     <string name="the_plummet">Утёс</string>
     <string name="headwaters_station">База Верховодье</string>
+    <string name="current_location">Текущая локация</string>
+    <string name="current_path_terrain">Текущий тип местности</string>
+    <string name="current_path_terrain_none">Отсутствует</string>
+    <string name="recorded_journey_button">Путевые заметки</string>
 </resources>
