Implemented campaign state

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -246,4 +246,7 @@
     <string name="current_path_terrain">Текущий тип местности</string>
     <string name="current_path_terrain_none">Отсутствует</string>
     <string name="recorded_journey_button">Путевые заметки</string>
+    <string name="weather_perfect_day">Ясный день</string>
+    <string name="weather_downpour">Ливень</string>
+    <string name="weather_howling_winds">Шквальный ветер</string>
 </resources>
