--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -272,4 +272,9 @@
     <string name="rangers_section_header">— Рейнджеры —</string>
     <string name="add_ranger_button">Добавить рейнджера</string>
     <string name="no_decks_for_add">У вас нет подходящих колод.</string>
+    <string name="settings_section_header">— Настройки —</string>
+    <string name="add_remove_players_button">Добавить/удалить игроков</string>
+    <string name="upload_campaign_button">Загрузить на RangersDB</string>
+    <string name="delete_campaign_button">Удалить кампанию</string>
+    <string name="leave_campaign_button">Покинуть кампанию</string>
 </resources>
