Implemented uploading campaign to RangersDB

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -275,6 +275,9 @@
     <string name="settings_section_header">— Настройки —</string>
     <string name="add_remove_players_button">Добавить/удалить игроков</string>
     <string name="upload_campaign_button">Загрузить на RangersDB</string>
+    <string name="upload_campaign_warning">Ошибка: Кампания содержит колоды!</string>
     <string name="delete_campaign_button">Удалить кампанию</string>
+    <string name="delete_campaign_confirmation">Вы уверены, что хотите удалить эту кампанию?</string>
+    <string name="leave_campaign_confirmation">Вы уверены, что хотите покинуть эту кампанию?</string>
     <string name="leave_campaign_button">Покинуть кампанию</string>
 </resources>
