--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,5 +329,10 @@
     <string name="delete_campaign_confirmation">Are you sure you want to delete this campaign?</string>
     <string name="leave_campaign_confirmation">Are you sure you want to leave this campaign?</string>
     <string name="leave_campaign_button">Leave campaign</string>
+    
+    //Undo
+    <string name="undo_travel_header">Undo travel</string>
+    <string name="undo_available_text">If you made a mistake when travelling or ending the day, you can undo your recent edits here. Decks will not be changed.</string>
+    <string name="undo_unavailable_text">There are no travel changes that can be undone.</string>
 
 </resources>
