--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="deck_creation_name_placeholder">Enter a name for this deck.</string>
     <string name="starter_deck_title">Choose starter deck:</string>
     <string name="upload_to_rangersdb">Upload to RangersDB</string>
+    <string name="use_taboo">Follow the Elder\'s Book of Uncommon Wisdom</string>
     <string name="create_deck_button">Create deck</string>
     <string name="background">Background</string>
     <string name="background_placeholder">Choose background</string>
