--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -185,6 +185,8 @@
     <string name="options_section_upload_deck">Загрузить на RangersDB</string>
     <string name="options_section_upload_deck_warning">Ошибка: Колода содержит улучшения!</string>
     <string name="options_section_delete_deck">Удалить колоду</string>
+    <string name="options_section_delete_current_deck">Удалить текущую версию</string>
+    <string name="options_section_delete_deck_all_versions">Удалить все версии</string>
     <string name="options_section_delete_deck_warning">Ошибка: Эта колода находится в кампании!</string>
     <string name="delete_deck_text">Вы уверены, что хотите удалить эту колоду? Версия: %d.</string>
     <string name="campaigns_current_day">День %d</string>
