--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="options_section_upload_deck">Upload to RangersDB</string>
     <string name="options_section_upload_deck_warning">Error: Deck contains upgrades!</string>
     <string name="options_section_delete_deck">Delete deck</string>
+    <string name="options_section_delete_current_deck">Delete current version</string>
+    <string name="options_section_delete_deck_all_versions">Delete all versions of deck</string>
     <string name="options_section_delete_deck_warning">Error: This deck in campaign!</string>
     <string name="delete_deck_text">Are you sure you want to delete this deck? Version: %d.</string>
 
